--- a/mindmap2d/build.xml
+++ b/mindmap2d/build.xml
@@ -13,6 +13,7 @@
     <!-- Add any additional non-server libs (such as JUnit) -->
     <fileset dir="war/WEB-INF/lib" includes="**/*.jar"/>
 	<fileset dir="${gwt.sdk}" includes="gwt-incubator-20100204-r1747.jar"/>
+	<fileset dir="${gwt.sdk}" includes="gwt-graphics-0.9.6.jar"/>
   </path>
 
   <target name="libs" description="Copy libs to WEB-INF/lib">
