First steps towards context-menus

--- a/mindmap2d/build.xml
+++ b/mindmap2d/build.xml
@@ -139,4 +139,13 @@ Test targets suppressed because -junit argument was not specified when running w
     <delete dir="war/mindmap2d" failonerror="false" />
   </target>
 
+  
+  <target name="publish" depends="build" description="Build and upload to my websever">
+  	 <exec executable="scp">
+    	<arg value="-r"/>
+		<arg value="war"/>
+		<arg value="schuett.name:/var/www/schuett.name/ole/mindmap2d"/>
+	  </exec>
+   </target>
+	
 </project>
