--- a/mindmap2d/build.xml
+++ b/mindmap2d/build.xml
@@ -4,8 +4,9 @@
   <property name="gwt.args" value="" />
 
   <!-- Configure path to GWT SDK -->
-  <property name="gwt.sdk" location="/opt/gwt-2.0.3" />
-
+  
+  <property file="oles_props.xml"/>
+  
   <path id="project.class.path">
     <pathelement location="war/WEB-INF/classes"/>
     <pathelement location="${gwt.sdk}/gwt-user.jar"/>
