--- a/mindmap2d/build.xml
+++ b/mindmap2d/build.xml
@@ -5,7 +5,7 @@
 
   <!-- Configure path to GWT SDK -->
   
-  <property file="oles_props.xml"/>
+  <property file="personal_props.xml"/>
   
   <path id="project.class.path">
     <pathelement location="war/WEB-INF/classes"/>
