--- a/mindmap2d/war/WEB-INF/web.xml
+++ b/mindmap2d/war/WEB-INF/web.xml
@@ -9,4 +9,30 @@
     <welcome-file>MindMap2D.html</welcome-file>
   </welcome-file-list>
 
+<servlet>
+    <servlet-name>proxy</servlet-name>
+    <servlet-class>de.fuberlin.mindmap2d.ProxyServlet</servlet-class>
+    
+    <init-param>
+    	<param-name>proxyHost</param-name>
+    	<param-value>localhost</param-value>
+    </init-param>
+    
+    <init-param>
+    	<param-name>proxyPort</param-name>
+    	<param-value>3000</param-value>
+    </init-param>
+</servlet>
+ 
+<servlet-mapping>
+    <servlet-name>proxy</servlet-name>
+    <url-pattern>/get_suggestions/*</url-pattern>
+</servlet-mapping>
+
+<!--
+<servlet-mapping>
+    <servlet-name>shell</servlet-name>
+    <url-pattern>/servlet/*</url-pattern>
+</servlet-mapping>
+-->
 </web-app>
