funzt jetzt mit rails

--- a/mindmap2d/war/WEB-INF/web.xml
+++ b/mindmap2d/war/WEB-INF/web.xml
@@ -9,21 +9,19 @@
     <welcome-file>MindMap2D.html</welcome-file>
   </welcome-file-list>
 
-<servlet>
+  <!-- <servlet>
     <servlet-name>proxy</servlet-name>
     <servlet-class>de.fuberlin.mindmap2d.ProxyServlet</servlet-class>
   
     <init-param>
     	<param-name>proxyHost</param-name>
-<!--   	<param-value>blooming-water-51.heroku.com</param-value> -->
-	   	<param-value>localhost</param-value>
+<param-value>blooming-water-51.heroku.com</param-value> 
 
     </init-param>
     
     <init-param>
     	<param-name>proxyPort</param-name>
-<!--  	<param-value>80</param-value> -->
-	  	<param-value>3000</param-value>
+  	<param-value>80</param-value> 
     </init-param>->
 </servlet>
  
@@ -38,7 +36,7 @@
     <url-pattern>/bubbles/*</url-pattern>
 </servlet-mapping>
 
-
+-->
 
 
 <!--
